objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contract Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( TEXT(MONTH( StartDate ))) = 0, &quot;Contract Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(  TEXT(ContractTerm)) = 0, &quot;Contract Term, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( BillingCity ) = 0, &quot;Complete Contract Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( CustomerSignedId ) = 0, &quot;Customer Signature, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(  OwnerExpirationNotice ,&quot;&quot;), &quot;Owner Expiration Notice&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(TEXT(MONTH(StartDate)))=0, 0,20) + IF( LEN(TEXT( ContractTerm ))=0, 0,20) + IF( LEN( BillingCity ) = 0, 0,20) + IF( LEN( CustomerSignedId) = 0, 0,20) + IF( ISPICKVAL(  OwnerExpirationNotice ,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Auto_Extend_Eligible__c</fullName>
        <description>Used in process builder to set the Autoextend field</description>
        <formula>AND(ISNULL(L2I_Auto_Extend__c),
    Not(SBQQ__Order__r.L2I_Terminated__c), 		
				AND(L2I_Order_Product_Category2__c = &quot;XXX&quot;,
							 SBQQ__Order__r.L2I_Original_Sales_Opportunity__r.L2I_Legacy_Opportunity__c
				)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Extend Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Auto_Extend_Process_Message__c</fullName>
        <label>Auto Extend Process Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Auto_Extend__c</fullName>
        <label>Auto Extend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Last_Auto_Extend_Processed__c</fullName>
        <label>Last Auto Extend Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_OrderActivationAlert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Activation Alert</label>
        <referenceTo>L2I_System_Alert__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Order_Product_Category2__c</fullName>
        <formula>SBQQ__Order__r.L2I_Product_Category_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Product Category2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxTerminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_ToBeTerminated__c</fullName>
        <label>xxTo Be Terminated</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>